--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 <p>天然生成在主世界的地表土质方块上，形状与桦树相同，树干为丛林木。破坏后会掉落樱桃。</p>
 <figure>
 	<img style="height:224px" src="items/screenshots/sakura_tree.png" title="五彩的羊毛树" />
-	<figcaption>图 五彩的羊毛树</figcaption>
+	<figcaption>图 樱花树</figcaption>
 </figure>
 
 <h3 id="死珊瑚扇">死珊瑚扇 (Dead Coral Fan)</h3>
