--- a/index.html
+++ b/index.html
@@ -461,9 +461,14 @@
 
 <h3 id="图腾柱">图腾柱 (Totem agentiaar)</h3>
 <p>以前的人们建造的通往天上的塔，天然生成在主世界的陆地地表。图腾柱由各种石砖构成，并且其中包含了矿石和宝箱，当心熔岩！宝箱包含一些食物、矿物和主世界常见生物的掉落物，包括<a href="#泥土之魂">泥土之魂</a>、<a href="#火焰之星">火焰之星</a>、<a href="#山脉之肢">山脉之肢</a>。</p>
+<p><span class="version">1.11 起</span> 下界也会有图腾柱，但是石砖变为黑石砖等方块，矿石变成下界的矿石等方块。</p>
 <figure>
 	<img style="height:260px" src="items/screenshots/totem_pillar.png" title="图腾柱和附魔室" />
 	<figcaption>图 图腾柱和附魔室</figcaption>
+</figure>
+<figure>
+	<img style="height:260px" src="items/screenshots/totem_pillar_nether.png" title="下界图腾柱" />
+	<figcaption>图 下界图腾柱</figcaption>
 </figure>
 
 <h3 id="水果树">水果树 (Fruit Tree)</h3>
