--- a/index.html
+++ b/index.html
@@ -464,11 +464,8 @@
 <p><span class="version">1.11 起</span> 下界也会有图腾柱，但是石砖变为黑石砖等方块，矿石变成下界的矿石等方块。</p>
 <figure>
 	<img style="height:260px" src="items/screenshots/totem_pillar.png" title="图腾柱和附魔室" />
-	<figcaption>图 图腾柱和附魔室</figcaption>
-</figure>
-<figure>
 	<img style="height:260px" src="items/screenshots/totem_pillar_nether.png" title="下界图腾柱" />
-	<figcaption>图 下界图腾柱</figcaption>
+	<figcaption>图 主世界图腾柱和下界图腾柱</figcaption>
 </figure>
 
 <h3 id="水果树">水果树 (Fruit Tree)</h3>
