--- a/index.html
+++ b/index.html
@@ -604,8 +604,7 @@
 
 <h3 id="钓鱼">钓鱼</h3>
 <p>有几率掉到宝藏珊瑚、珊瑚扇、湿海绵、鳕鱼头/鲑鱼头/热带鱼头/河豚头、<a href="#水晶之心">水晶之心</a>和垃圾火药/海晶碎片。</p>
-<p><span class="oldversion">1.10 起</span> 有几率得到垃圾海泡菜，在末地钓鱼有几率钓到宝藏潜影壳。</p>
-<p><span class="version">1.11起</span> 在末地钓鱼有几率钓到宝藏潜影壳和紫颂花。</p>
+<p><span class="oldversion">1.10 起</span> 有几率得到垃圾海泡菜，在末地钓鱼有几率钓到宝藏潜影壳和紫颂花。</p>
 
 <h3 id="玩家的头">玩家的头</h3>
 <p><span class="version">1.10 起</span> 玩家被手持抢夺附魔的武器杀死时会掉落头。</p>
@@ -1807,7 +1806,7 @@
 <tr><td><a class="ui soul_sand"></a><a class="ui dirt"></a></td>
 	<td>灵魂沙+泥土</td>
 	<td><a class="ui soul_soil"><span class="stack">2</span></a></td>
-	<td>2灵魂土 <span class="version">1.10 起</span></td>
+	<td>2灵魂土 <span class="version">1.11 起</span></td>
 	<td>1</td>
 	<td>1</td>
 </tr>
@@ -3482,10 +3481,10 @@
 		<a class="ui xp_orb" title="经验"><span class="stack">32</span></a>
 	</td>
 </tr>
-<tr><td><span class="version">1.11</span> 僵尸马(10%)</td>
+<tr><td><span class="version">1.10 起</span> 僵尸马(10%)</td>
 	<td><a class="ui ci mob_zombie_horse" title="僵尸马"></a></td>
 </tr>
-<tr><td><span class="version">1.11</span> 骷髅马(10%)</td>
+<tr><td><span class="version">1.10 起</span> 骷髅马(10%)</td>
 	<td><a class="ui ci mob_skeleton_horse" title="僵尸马"></a></td>
 </tr>
 <tr><td>驴</td>
@@ -4457,6 +4456,21 @@
 		<a class="chiseled_stone_bricks" title="任意石砖"></a>
 		<a class="chiseled_stone_bricks" title="任意石砖"></a>
 		<a class="silverfish_spawn_egg" title="蠹虫刷怪蛋"></a>
+	</span></td></tr>
+
+<tr><th>岩浆怪刷怪蛋</th>
+	<td>岩浆膏+龙蛋(1.11版本起)</td>
+	<td><span class="ui ct" title="工作台">
+		<a class="magma_cream" title="岩浆膏"></a>
+		<a class="magma_cream" title="岩浆膏"></a>
+		<a class="magma_cream" title="岩浆膏"></a>
+		<a class="magma_cream" title="岩浆膏"></a>
+		<a class="dragon_egg" title="龙蛋"></a>
+		<a class="magma_cream" title="岩浆膏"></a>
+		<a class="magma_cream" title="岩浆膏"></a>
+		<a class="magma_cream" title="岩浆膏"></a>
+		<a class="magma_cream" title="岩浆膏"></a>
+		<a class="magma_cube_spawn_egg" title="岩浆怪刷怪蛋"></a>
 	</span></td></tr>
 </tbody></table>
 
@@ -6991,7 +7005,7 @@
 		<a class="ci sushi" title="寿司"></a>
 		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 	</span></td>
-	<td><span class="version">1.11起</span><br /><code>cpp:sushi</code></td>
+	<td><span class="version">1.10 起</span><br /><code>cpp:sushi</code></td>
 </tr>
 <tr><td>干海带+小麦+生鲑鱼</td>
 	<td><span class="ui cm" title="合成器">
@@ -7007,7 +7021,7 @@
 		<a class="ci sushi" title="寿司"></a>
 		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 	</span></td>
-	<td><span class="oldversion">1.9.x-1.10.x</span><br /><code>cpp:sushi</code></td>
+	<td><span class="oldversion">1.9.x</span><br /><code>cpp:sushi</code></td>
 </tr>
 <tr><th><strong id="青团">青团</strong><br />
 		<a class="ui icons18 hunger" title="5"></a><a class="ui icons18 hunger" title="5"></a><a class="ui icons18 hunger_half" title="5"></a></th>
@@ -7025,7 +7039,7 @@
 		<a class="ci qingtuan" title="青团"></a>
 		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 	</span></td>
-	<td><span class="version">1.11起</span><br /><code>cpp:qingtuan</code></td>
+	<td><span class="version">1.10 起</span><br /><code>cpp:qingtuan</code></td>
 </tr>
 <tr><th><strong id="樱饼">樱饼</strong><br />
 		<a class="ui icons18 hunger" title="5"></a><a class="ui icons18 hunger" title="5"></a><a class="ui icons18 hunger_half" title="5"></a></th>
@@ -7043,7 +7057,7 @@
 		<a class="ci sakura_mochi" title="樱饼"></a>
 		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 	</span></td>
-	<td><span class="version">1.11起</span><br /><code>cpp:sakura_mochi</code></td>
+	<td><span class="version">1.10 起</span><br /><code>cpp:sakura_mochi</code></td>
 </tr>
 <tr><th><strong id="三明治">三明治</strong><br />
 		<a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><br />
@@ -8076,11 +8090,10 @@
 </tbody></table>
 
 <p>树苗种下后可用骨粉催熟。每个树叶都对应一个实体，大面积种植可能会卡顿。</p>
-<p><span class="version">1.10 起</span> 水果树下会随机掉落除香橼外的所有<a href="#水果">水果</a>。</p>
+<p><span class="version">1.10 起</span> 水果树下会随机掉落除香橼外的所有<a href="#水果">水果</a>。破坏樱花树树叶掉落樱花树树苗、<a href="#樱桃">樱桃</a>。</p>
 <p><span class="oldversion">1.9.x</span> 水果树下会随机长出除香橼外的所有水果，破坏相邻的树叶即可掉落。只有下方为空气的树叶下方才能长出。</p>
 <p>矿石树树叶一定时间后会转化为矿石。</p>
 <p>破坏羊毛树树叶掉落羊毛树树苗、羊毛、鱼或羊。</p>
-<p><span class="version">1.11起</span>加入。破坏樱花树树叶掉落樱花树树苗、<a href="#樱桃">樱桃</a>。</p>
 
 
 <!--==================================================================-->
@@ -9484,15 +9497,12 @@
 	<a class="ui ci sakura_sapling" title="樱花树树苗"><span class="stack">2%</span></a>
 	<a class="ui bamboo" title="竹子"><span class="stack">2%</span></a></td>
 	
-	<td><a class="ui quartz" title="石英"><span class="stack">45%</span></a>
+	<td><a class="ui quartz" title="石英"><span class="stack">55%</span></a>
 	<a class="ui clay_ball" title="粘土球"><span class="stack">20%</span></a>
-	<a class="ui nether_wart" title="下界疣"><span class="stack">10%</span></a>
+	<a class="ui nether_wart" title="下界疣"><span class="stack">9%</span></a>
 	<a class="ui blaze_powder" title="烈焰粉"><span class="stack">5%</span></a>
 	<a class="ui weeping_vines" title="垂泪藤"><span class="stack">5%</span></a>
 	<a class="ui twisting_vines" title="缠怨藤"><span class="stack">5%</span></a>
-	<a class="ui crimson_roots" title="绯红菌索"><span class="stack">3%</span></a>
-	<a class="ui warped_roots" title="诡异菌索"><span class="stack">3%</span></a>
-	<a class="ui nether_sprouts" title="下界苗"><span class="stack">3%</span></a>
 	<a class="ui ghast_tear" title="恶魂之泪"><span class="stack">1%</span></a></td>	
 </tr></tbody></table>
 
@@ -9501,7 +9511,7 @@
 <p>将12个绿宝石块摆成末地传送门框架的形状，然后点火即可得到<strong>末地传送门框架</strong>。</p>
 <p>玩家杀死生物时背包的沙子(1.10.x)/砂土(1.11)会变成灵魂沙(1.10.x)/灵魂土(1.11)。</p>
 <p>在泥土上放置草丛可以得到草方块。</p>
-<p>使用<code>/trigger cppHome</code>可以返回自己的岛屿(1.11)。如果需要前往他人岛屿，让管理员协助你传送过去，然后你使用<code>/trigger cppSetHome</code>来重新设置自己岛屿位置。</p>
+<p>使用<code>/trigger cppHome</code>可以返回自己的岛屿。如果需要前往他人岛屿，让管理员协助你传送过去，然后你使用<code>/trigger cppSetHome</code>来重新设置自己岛屿位置。</p>
 
 <h3>1.9 版本空岛</h3>
 <p>空岛模式会在y=0处为空气时自动开启，建议玩家使用自定义超平坦如<code>minecraft:air;minecraft:flower_forest;</code>进入。</p>
