--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 <li><strong>食物装饰</strong>：40种植物、76种食物、79种头颅、22种头饰服饰、18种春联横批、36种油画水墨画、67种纸片人、17种告示牌、100种称号，装点自己也装点自己的家。</li>
 </ul>
 <p style="display: none;">本模组即将完结，以后应该只会修复bug和优化内容，不会再有大的更新。如遇到Minecraft命令机制大改或新生物等内容，我还是会及时更新代码并支持新的内容。感谢大家一直以来的支持和帮助！</p>
-<p>如有任何意见建议，欢迎在QQ群(<span style="color:red;">群号：455270603</span>)反馈、<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>、<a href="https://github.com/ruhuasiyu/craftingpp/issues/new">发起issue</a>，请在反馈时提供游戏版本和模组版本。</p>
+<p>如有任何意见建议，欢迎在QQ群(<span style="color:red;">群号：455270603</span>入群答案发酵桶)反馈、<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>、<a href="https://github.com/ruhuasiyu/craftingpp/issues/new">发起issue</a>，请在反馈时提供游戏版本和模组版本。</p>
 
 <h3 id="下载与安装">📦 下载与安装</h3>
 <p>更多版本请<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tags">前往 github 页面查看</a>。其它链接：<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp">官方主页</a>、<a href="http://www.mcbbs.net/thread-696861-1-1.html">MCBBS 页</a>、<a href="https://www.mcmod.cn/class/1297.html">MC 百科页</a>。</p>
@@ -383,15 +383,45 @@
 <tbody>
 	<tr>
 		<td>Java版快照 20w16a</td>
+		<td>快照 v1.11-0419</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0419.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0419.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版快照 20w16a</td>
 		<td>快照 v1.11-0418</td>
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0418.zip">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0418.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版快照 20w16a</td>
+		<td>快照 v1.11-0416</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0416.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0416.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版快照 20w16a</td>
+		<td>快照 v1.11-0419</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0419.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0419.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版 1.15.2</td>
+		<td>v1.10.6</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.6">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.6.zip">官方</a></td>
 	</tr>
 	<tr>
 		<td>Java版 1.15.2</td>
 		<td>v1.10.5</td>
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.5">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.5.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版 1.15.2</td>
+		<td>v1.10.4</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.4">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.4.zip">官方</a></td>
 	</tr>
 	<tr>
 		<td>Java版 1.14.x</td>
@@ -10000,7 +10030,7 @@
 		<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2020-04-18</p>
+<p>最后更新 2020-04-19</p>
 </footer>
 
 </article>
