--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
 <tr><th><strong id="泥土之魂">泥土之魂</strong></th>
 	<td><a class="ui ci soul_of_dirt"></a></td>
 	<td><code>cpp:soul_of_dirt</code></td>
-	<td>僵尸/僵尸村民/尸壳/骷髅/流浪者/凋灵骷髅/骷髅马/僵尸猪人/幻翼/溺尸/巨人僵尸/僵尸马被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。</td>
+	<td>僵尸/僵尸村民/尸壳/骷髅/流浪者/凋灵骷髅/骷髅马/僵尸猪人/幻翼/溺尸/巨人僵尸/僵尸马/僵尸疣猪兽被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。</td>
 </tr>
 <tr><th><strong id="大地之证">大地之证</strong></th>
 	<td><a class="ui ci certification_of_earth"></a></td>
