--- a/index.html
+++ b/index.html
@@ -382,6 +382,12 @@
 	<th>下载地址</th></tr></thead>
 <tbody>
 	<tr>
+		<td>Java版快照 20w18a</td>
+		<td>快照 v1.11-0502</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0502.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0502.zip">官方</a></td>
+	</tr>
+	<tr>
 		<td>Java版快照 20w16a</td>
 		<td>快照 v1.11-0419</td>
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0419.zip">GitHub</a> |
@@ -400,10 +406,10 @@
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0416.zip">官方</a></td>
 	</tr>
 	<tr>
-		<td>Java版快照 20w16a</td>
-		<td>快照 v1.11-0419</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0419.zip">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0419.zip">官方</a></td>
+		<td>Java版 1.15.2</td>
+		<td>v1.10.7</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.7">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.7.zip">官方</a></td>
 	</tr>
 	<tr>
 		<td>Java版 1.15.2</td>
@@ -10030,7 +10036,7 @@
 		<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2020-04-19</p>
+<p>最后更新 2020-05-02</p>
 </footer>
 
 </article>
