--- a/index.html
+++ b/index.html
@@ -381,7 +381,13 @@
 	<th>下载地址</th></tr></thead>
 <tbody>
 	<tr>
-		<td>Java版快照 20w18a</td>
+		<td>Java版快照 20w18a-20w19a</td>
+		<td>快照 v1.11-0507</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0507.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0507.zip">官方</a></td>
+	</tr>
+	<tr>
+		<td>Java版快照 20w18a-20w19a</td>
 		<td>快照 v1.11-0502</td>
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0502.zip">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0502.zip">官方</a></td>
@@ -392,30 +398,24 @@
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0419.zip">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0419.zip">官方</a></td>
 	</tr>
+	<tr><td colspan="3"></td></tr>
 	<tr>
-		<td>Java版快照 20w16a</td>
-		<td>快照 v1.11-0418</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0418.zip">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0418.zip">官方</a></td>
+		<td rowspan="3">Java版 1.15.2</td>
+		<td>v1.10.8</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.8">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.8.zip">官方</a></td>
 	</tr>
 	<tr>
-		<td>Java版 1.15.2</td>
 		<td>v1.10.7</td>
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.7">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.7.zip">官方</a></td>
 	</tr>
 	<tr>
-		<td>Java版 1.15.2</td>
 		<td>v1.10.6</td>
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.6">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.6.zip">官方</a></td>
 	</tr>
-	<tr>
-		<td>Java版 1.15.2</td>
-		<td>v1.10.5</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.5">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.5.zip">官方</a></td>
-	</tr>
+	<tr><td colspan="3"></td></tr>
 	<tr>
 		<td>Java版 1.14.x</td>
 		<td>v1.9.24</td>
@@ -9892,7 +9892,7 @@
 		<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2020-05-03</p>
+<p>最后更新 2020-05-07</p>
 </footer>
 
 </article>
