--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <base href="" />
 <link rel="shortcut icon" href="https://zsx.neocities.org/main/favicon.ico" />
 <link rel="stylesheet" href="items/items_css.css" />
-<script src="items/menufixed.js"></script>
 </head>
 
 <body onload="main();">
@@ -6925,7 +6924,8 @@
 		<a class="empty"></a>
 		<a class="empty"></a>
 		<a class="empty"></a>
-		<a class="ci raw_braised_beef_with_potatoes" title="生土豆牛肉"></a><span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
+		<a class="ci raw_braised_beef_with_potatoes" title="生土豆牛肉"></a>
+		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 	</span></td>
 	<td><code>cpp:raw_braised_beef_with_potatoes</code></td>
 </tr>
