--- a/1.8.html
+++ b/1.8.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="items/items_css.css"></a>
 </head>
 
-<body onload="main();">
+<body>
 <div style="background-color:#eee;">
 <nav>
 <ul>
