--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="items/items_css.css" />
 </head>
 
-<body onload="main();">
+<body>
 
 <nav class="smallicons"><ul>
 <li style="border-bottom: #ddd 4px solid;padding:3px 0 3px 16px;"><a href="#banner">更多的合成</a></li>
@@ -422,6 +422,8 @@
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.24.zip">官方</a></td>
 	</tr>
 </tbody></table>
+
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1sA411t7ML">https://www.bilibili.com/video/BV1sA411t7ML</a></p>
 <p>下载后解压缩。</p>
 <ul>
 <li><a style="font-weight:bold;">资源包</a>文件夹位于<code>.minecraft/resourcepacks</code>文件夹，该文件夹也可从游戏界面<code>选项->资源包->打开资源包文件夹</code>处打开。将<code>更多的合成资源包.zip</code>放入，然后进入选择资源包的页面，选择该资源包至右侧已选的资源包。如果仍然无法使用，请解压后放入。</li>
