--- a/index.html
+++ b/index.html
@@ -383,6 +383,11 @@
 <tbody>
 	<tr>
 		<td rowspan="3">Java版快照 20w18a-20w20b</td>
+		<td>快照 v1.11-0517</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0517.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0517.zip">官方</a></td>
+	</tr>
+	<tr>
 		<td>快照 v1.11-0515</td>
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0515.zip">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0515.zip">官方</a></td>
@@ -392,14 +397,14 @@
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0507.zip">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0507.zip">官方</a></td>
 	</tr>
-	<tr>
-		<td>快照 v1.11-0502</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11-0502.zip">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11-0502.zip">官方</a></td>
-	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
 		<td rowspan="3">Java版 1.15.2</td>
+		<td>v1.10.10</td>
+		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.10">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.10.zip">官方</a></td>
+	</tr>
+	<tr>
 		<td>v1.10.9</td>
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.9">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.9.zip">官方</a></td>
@@ -408,11 +413,6 @@
 		<td>v1.10.8</td>
 		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.8">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.8.zip">官方</a></td>
-	</tr>
-	<tr>
-		<td>v1.10.7</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.7">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.7.zip">官方</a></td>
 	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
@@ -8562,8 +8562,9 @@
 
 <!--==================================================================-->
 <h2 id="装饰">装饰</h2>
-<h3>称号</h3>
-玩家手持绿宝石并根据下表的数字输入 <code>/trigger cppTitle set 数值</code> 即可消耗绿宝石并获得相应称号。
+<h3 id="称号">称号</h3>
+<p>玩家手持绿宝石并根据下表的数字输入 <code>/trigger cppTitle set 数值</code> 即可消耗绿宝石并获得相应称号。</p>
+<p><span class="version">1.10.10起</span> 设置为101可以取消称号。</p>
 <table class="center">
 <thead>
 <tr><th>+</th>
@@ -9543,7 +9544,7 @@
 
 <!--==================================================================-->
 <h2 id="空岛">空岛</h2>
-<p>空岛模式会在y=0处为空气时自动开启，建议玩家使用自定义超平坦如<code>minecraft:air;minecraft:flower_forest;</code>进入。空岛模式下不会生成模组的结构，不同玩家的间距默认为1000米。</p>
+<p>空岛模式会在y=0处为空气时自动开启，建议玩家使用自定义超平坦如<code>minecraft:air;minecraft:flower_forest;</code>进入。空岛模式下主世界不会生成模组的结构，不同玩家的间距默认为1000米。</p>
 <p>玩家首次进入时，会生成一块基岩和一个包含1泥土、4橡树树苗(1.9.x版本为1个)、16骨粉的箱子。玩家破坏树叶会掉落骨粉和线，然后参考<a href="#其它原版物品">本模组原版物品合成变动</a>，使用线和8木棍合成雪球。
 <p><span class="version">1.10.x-1.11</span> 在堆肥桶上方放置雪块可将其变成<strong>发酵桶</strong>，类似于堆肥桶，放入各种植物或食物满了之后，会产出泥土。在泥土上放置草丛可以得到草方块。</p>
 <p><span class="oldversion">1.9.x</span> 使用雪球和4树苗/马铃薯/胡萝卜/小麦/甜菜根的任意组合合成泥土。
@@ -9919,7 +9920,7 @@
 		<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2020-05-15</p>
+<p>最后更新 2020-05-17</p>
 </footer>
 
 </article>
